fix hero alignment

--- a/index.css
+++ b/index.css
@@ -32,7 +32,7 @@ h2 {
 
 hr {
 	width: 100%;
-	height: 3px;
+	height: 6px;
 	border: none;
 	background-color: var(--main-color);
 	transform-origin: center;
@@ -96,11 +96,11 @@ p {
 	width: 100%;
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
+	justify-content: flex-end;
 	align-items: center;
 	background: var(--yellow);
 	background: var(--gradient-darken);
-	margin: 0 auto;
+	margin: 0;
 	text-align: center;
 	height: 100vh;
 	position: sticky;
@@ -112,7 +112,10 @@ p {
 	font-weight: normal;
 	font-size: 5.2rem;
 	z-index: 1;
-	margin: 10vh 0 5vh 0;
+	margin: 0;
+	position: absolute;
+	top: calc(13.5% + 205px);
+    transform: translateY(-50%);
 }
 
 .letter {
@@ -131,7 +134,7 @@ p {
 }
 
 .prompt {
-	margin: 5vh 0;
+	margin: 0 0 5vh 0;
 	opacity: 0;
 	font-size: 4rem;
 	animation: focusIn 400ms 2700ms ease-in forwards;
